Shenandoah: ditch debug safepoint timeout adjustment

XMLWordPrintable

    • gc
    • b14

        shenandoahArguments adjust the safepoint timeouts for debug builds:

          // Make sure safepoint deadlocks are failing predictably. This sets up VM to report
          // fatal error after 10 seconds of wait for safepoint syncronization (not the VM
          // operation itself). There is no good reason why Shenandoah would spend that
          // much time synchronizing.
        #ifdef ASSERT
          FLAG_SET_DEFAULT(SafepointTimeout, true);
          FLAG_SET_DEFAULT(SafepointTimeoutDelay, 10000);
          FLAG_SET_DEFAULT(AbortVMOnSafepointTimeout, true);
        #endif

        It was introduced before integration:
         https://mail.openjdk.java.net/pipermail/shenandoah-dev/2018-October/007733.html

        On some of the busy servers with parallel tests, some threads are actually that late for safepoint synchronization! So this block introduces false failures, and should be removed.

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: