8240534: Shenandoah: ditch debug safepoint timeout adjustment

Reviewed-by: rkennke